--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "use-inertia-simple-page-transition",
   "author": "Giandomenico Di Salvatore",
   "description": "React hook that triggers css transitions inside Inertia layouts",
-  "main": "use-inertia-simple-page-transition.js",
+  "main": "index.js",
+  "homepage": "https://github.com/giandomenicodisalvatore/use-inertia-simple-page-transition#readme",
   "scripts": {
     "test": "."
   },
   "repository": {
     "type": "git",
-    "url": "ok"
+    "url": "https://github.com/giandomenicodisalvatore/use-inertia-simple-page-transition"
   },
   "peerDependencies": {
-    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/react": "^0.8.1",
     "react": "^18.2.0"
   },
   "keywords": [
@@ -23,6 +24,6 @@
     "css-transitions",
     "transitions"
   ],
-  "license": "BSD-2-Clause",
-  "version": "1.0.1"
+  "license": "MIT",
+  "version": "1.1.0"
 }
